using email instead of usermane in the request body
